Fix body overflow x and adjust zoom when looking at all listings

--- a/app/assets/stylesheets/base/reset.scss
+++ b/app/assets/stylesheets/base/reset.scss
@@ -13,6 +13,7 @@ html, body, form, label, div, section, ul, li, h1, h2, h3, h4, p, a {
 
 body {
   font-family: 'Palanquin', sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
